fix footer spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -119,5 +119,5 @@ p.article-card-desc {
 }
 
 .body-container {
-  min-height: 100vh;
+  min-height: calc(100vh - 5rem);
 }
